Test loading table properties in Utils.loadInstanceProperties